tests/baselines/reference/instantiateNonGenericTypeWithTypeArguments.errors.txt
tests/cases/conformance/types/typeParameters/typeArgumentLists/instantiateNonGenericTypeWithTypeArguments.ts(8,15): error TS2558: Expected 0 type arguments, but got 1.
tests/cases/conformance/types/typeParameters/typeArgumentLists/instantiateNonGenericTypeWithTypeArguments.ts(11,17): error TS2558: Expected 0 type arguments, but got 1.
tests/cases/conformance/types/typeParameters/typeArgumentLists/instantiateNonGenericTypeWithTypeArguments.ts(14,16): error TS2558: Expected 0 type arguments, but got 1.
tests/cases/conformance/types/typeParameters/typeArgumentLists/instantiateNonGenericTypeWithTypeArguments.ts(18,10): error TS2347: Untyped function calls may not accept type arguments.


==== tests/cases/conformance/types/typeParameters/typeArgumentLists/instantiateNonGenericTypeWithTypeArguments.ts (4 errors) ====
    // it is an error to provide type arguments to a non-generic call
    // all of these are errors
    
    class C {
        x: string;
    }
    
    var c = new C<number>();
                  ~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
    
    function Foo(): void { }
    var r = new Foo<number>();
                    ~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
    
    var f: { (): void };
    var r2 = new f<number>();
                   ~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
    
    var a: any;
    // BUG 790977
    var r2 = new a<number>();
             ~~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.